init/kubernetes/deployment-kafka.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: dev-kafka-1-headless-svc
  namespace: dev-app
spec:
  type: ExternalName
  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: dev-kafka-1-svc.dev-kafka.svc.cluster.local
  selector:
    app: kafka-1
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: dev-kafka-2-headless-svc
  namespace: dev-app
spec:
  type: ExternalName
  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: dev-kafka-2-svc.dev-kafka.svc.cluster.local
  selector:
    app: kafka-2
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: dev-kafka-3-headless-svc
  namespace: dev-app
spec:
  type: ExternalName
  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: dev-kafka-3-svc.dev-kafka.svc.cluster.local
  selector:
    app: kafka-3
---
apiVersion: v1
kind: Service
metadata:
  name: dev-kafka-1-svc
  namespace: dev-kafka
  labels:
    app: kafka-1
spec:
  selector:
    app: kafka-1
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
#  type: NodePort
#  type: LoadBalancer
#  type: ClusterIP
#  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: dev-kafka-2-svc
  namespace: dev-kafka
  labels:
    app: kafka-2
spec:
  selector:
    app: kafka-2
  ports:
    - protocol: TCP
      port: 9093
      targetPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: dev-kafka-3-svc
  namespace: dev-kafka
  labels:
    app: kafka-3
spec:
  selector:
    app: kafka-3
  ports:
    - protocol: TCP
      port: 9094
      targetPort: 9094
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-kafka-1
  namespace: dev-kafka
  labels:
    app: kafka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-1
  template:
    metadata:
      labels:
        app: kafka-1
    spec:
      containers:
        - name: broker
          image: bitnami/kafka
          ports:
            - containerPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-kafka-2
  namespace: dev-kafka
  labels:
    app: kafka-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-2
  template:
    metadata:
      labels:
        app: kafka-2
    spec:
      containers:
        - name: broker
          image: bitnami/kafka
          ports:
            - containerPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-kafka-3
  namespace: dev-kafka
  labels:
    app: kafka-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-3
  template:
    metadata:
      labels:
        app: kafka-3
    spec:
      containers:
        - name: broker
          image: bitnami/kafka
          ports:
            - containerPort: 9094
