init/kubernetes/deployment-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-mysql
  namespace: dev-db
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: dev-mysql-service
  namespace: dev-db
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  #  type: NodePort
  type: LoadBalancer
#  type: ClusterIP
#  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: dev-mysql-headless-svc
  namespace: dev-app
spec:
  type: ExternalName
  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: dev-mysql-service.dev-db.svc.cluster.local
  selector:
    app: store
