init/kubernetes/deployment-zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-zookeeper
  namespace: dev-kafka
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: zookeeper:latest
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: dev-zookeeper-service
  namespace: dev-kafka
  labels:
    app: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
#  type: NodePort
#  type: LoadBalancer
#  type: ClusterIP
#  type: ExternalName
