init/kubernetes/service-headless-common.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: dev-common-headless-svc
  namespace: dev-ingress
spec:
  type: ExternalName
  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: dev-common.dev-app.svc.cluster.local
  selector:
    app: common
