init/kubernetes/service-headless-delivery.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: dev-delivery-headless-svc
  namespace: dev-ingress
spec:
  type: ExternalName
  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: dev-delivery.dev-app.svc.cluster.local
  selector:
    app: store
