init/kubernetes/service-headless-kafka.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: dev-kafka-headless-svc
  namespace: dev-app
spec:
  type: ExternalName
  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: dev-kafka-service.dev-kafka.svc.cluster.local
  selector:
    app: store
