init/kubernetes/service-headless-mysql.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: dev-mysql-headless-svc
  namespace: dev-app
spec:
  type: ExternalName
  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: dev-mysql-service.dev-db.svc.cluster.local
  selector:
    app: store
