init/kubernetes/service-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-mysql-service
  namespace: dev-db
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
#  type: NodePort
  type: LoadBalancer
#  type: ClusterIP
#  type: ExternalName
