init/kubernetes/service-zookeeper.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-zookeeper-service
  namespace: dev-kafka
  labels:
    app: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
#  type: NodePort
#  type: LoadBalancer
#  type: ClusterIP
