init/kubernetes/ui-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-ui-kafka
  namespace: dev-kafka
  labels:
    app: ui-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-kafka
  template:
    metadata:
      labels:
        app: ui-kafka
    spec:
      containers:
        - name: ui-kafka
          image: provectuslabs/kafka-ui
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dev-ui-kafka-service
  namespace: dev-kafka
  labels:
    app: ui-kafka
spec:
  selector:
    app: ui-kafka
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8080
#  type: NodePort
  type: LoadBalancer
#  type: ClusterIP
#  type: ExternalName
