init/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2         # $2는 아래 path 값 중 2번째 항목만 전달됨(즉, /common-service/html/auth/loginPage 요청은 → 백엔드로는 /html/auth/loginPage 로 전달됨)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"               # HTTP → HTTPS 리디렉션 활성화
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - my-pizza.io
      secretName: mypizza-tls-secret      # 🔑 TLS 인증서가 담긴 Secret 이름 (아래 설명 참고)
  rules:
  - host: my-pizza.io    # host 설정시 바로 밑에 http의 - 은 삭제해야 함
    http:
      paths:               # 각 path는 백엔드와 연결됨
      - path: /
        pathType: Prefix
        backend:           # 연결될 서비스이름과 port
          service:
            name: dev-gateway-headless-svc
#            name: dev-store.my-pizza.svc.cluster.local
#            name: "dev-store"."my-pizza".svc.cluster.local
            port:
              number: 8080
